<resources>
    <string name="app_name">DogNet</string>
    <string name="created_by">Created by Sarolta Soos</string>
    <string name="welcome">Welcome to DogNet!</string>
    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_closed">Closed</string>
    <string name="for_vets">For vets</string>
    <string name="for_trainers">For trainers</string>
    <string name="lost_dog">Lost dog</string>
    <string name="found_dog">Found dog</string>
    <string name="please_scan_for_chip_number">Please scan for chip number!</string>
    <string name="chip">Chip: </string>
    <string name="ok">OK</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="pet_name">Pet name: </string>
    <string name="owner_name">Owner: </string>
    <string name="please_fill_in_the_form_below">Please fill in the form below!</string>
    <string name="breed">Breed: </string>
    <string name="date_of_birth">Birthday: </string>
    <string name="address">Address: </string>
    <string name="phone_number">Phone: </string>
    <string name="sex">Sex: </string>
    <string name="group">Group: </string>
    <string name="vaccinations">Vaccinations:</string>
    <string name="medical_record">Medical record:</string>
    <string name="vacc_name">Vaccination name: </string>
    <string name="date">Date: </string>
    <string name="new_note">New note: </string>
    <string name="start_or_review">Start a new session or review a saved one?</string>
    <string name="new_training">New training</string>
    <string name="review_training">Review training</string>
    <string name="trainings">Trainings: </string>
    <string name="add_image">Do you want to add an image?</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_photo">Choose photo</string>
    <string name="no_photo">No photo</string>
    <string name="additional_info">Extra info: </string>
    <string name="extra_info">Extra info: </string>
    <string name="photo">Photo: </string>
    <string name="last_seen">Last seen: </string>
    <string name="last_seen_at">Last seen at: </string>
    <string name="no_chip">No chip</string>
    <string name="found_at">Found at:</string>
    <string name="photo_of_pet">Photo of pet</string>
    <string name="unkown">Unknown</string>
    <string name="no_location">No location specified!</string>

    <string name="date_format">%1$d - %2$d - %3$d</string>
    <string name="pet_found">Pet already found! See info below:</string>
    <string name="call_number">Call number</string>
    <string name="pet_lost">Pet\'s been already reported! See info below:</string>
    <string name="about">About</string>
    <string name="find_shelters">Find shelters</string>
    <string name="find_vets_nearby">Find vets nearby</string>
    <string name="project_information">Project information:</string>
    <string name="about_string">This app was created to help the work of vetenarians and dog trainers. A registry can be led to keep up-to-date information about pets. Besides, people who find dogs on the streets can easily get in touch with the owners.</string>
    <string name="lost_from">Lost from:</string>
</resources>
