<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fifteen_dp"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/ten_dp"
        android:text="@string/add_image"
        android:gravity="center_horizontal"
        android:textSize="@dimen/dialog_fragment_title_size"
        android:textStyle="bold"
        android:textColor="@color/colorAccent2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:weightSum="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnTakePhoto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/take_photo"
            android:textColor="@color/colorAccent2" />

        <Button
            android:id="@+id/btnChoosePhoto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/choose_photo"
            android:textColor="@color/colorAccent2" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/no_photo"
            android:textColor="@color/colorAccent2" />

    </LinearLayout>

</LinearLayout>