<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fifteen_dp"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/ten_dp"
        android:text="@string/project_information"
        android:textSize="@dimen/dialog_fragment_title_size"
        android:textStyle="bold"
        android:textColor="@color/colorAccent2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/ten_dp"
        android:text="@string/about_string"
        android:textSize="@dimen/dialog_fragment_text_size"
        android:textColor="@color/colorAccent2" />

    <Button
        android:id="@+id/okBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ok"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorAccent2" />

</LinearLayout>