<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fifteen_dp"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/ten_dp"
        android:text="@string/please_scan_for_chip_number"
        android:textSize="@dimen/dialog_fragment_title_size"
        android:textStyle="bold"
        android:textColor="@color/colorAccent2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/ten_dp"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/chip"
            android:textSize="@dimen/dialog_fragment_text_size"
            android:textStyle="bold"
            android:textColor="@color/colorAccent2" />

        <EditText
            android:id="@+id/chipEditText"
            android:layout_width="0dp"
            android:layout_height="@dimen/twenty_five_dp"
            android:layout_weight="3"
            android:paddingStart="@dimen/five_dp"
            android:paddingEnd="@dimen/one_dp"
            android:enabled="false"
            android:textSize="@dimen/dialog_fragment_text_size"
            android:background="@color/colorAccent2" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/start"
            android:textColor="@color/colorAccent2"
            android:layout_marginEnd="55dp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent2" />

    </LinearLayout>

</LinearLayout>